add login, register, mobile menu

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -14,6 +14,7 @@
     --color-details: rgba(43, 43, 42, 0.4);
     --color-dropdown: rgba(38, 38, 38, 0.6);
     --color-dropdown-scroll: rgba(38, 38, 38, 0.08);
+    --color-input-text: rgba(38, 38, 38, 0.8);
     --color-back: rgba(38, 38, 38, 0.05);
     --color-star: #ffc531;
     --color-border: rgba(38, 38, 38, 0.15);
