--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,3 +1,9 @@
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+    -webkit-text-fill-color: rgba(38, 38, 38, 0.8) !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 .form {
     display: flex;
     flex-direction: column;
@@ -13,14 +19,14 @@
 }
 
 .field {
-    border: 1px solid var(--color-border);
+    border: 1px solid rgba(38, 38, 38, 0.15);
     border-radius: 30px;
     font-family: "Manrope", sans-serif;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.28571;
     letter-spacing: -0.03em;
-    color: var(--color-input-text);
+    color: rgba(38, 38, 38, 0.8);
     padding: 12px;
     display: flex;
 }
@@ -30,6 +36,20 @@
     padding: 0;
     outline: none;
     width: 100%;
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.03em;
+    color: rgba(38, 38, 38, 0.8);
+}
+
+.invalid {
+    border: 1px solid #ef2447;
+}
+
+.valid {
+    border: 1px solid #08aa83;
 }
 
 .error {
@@ -38,7 +58,7 @@
     font-size: 10px;
     line-height: 1.2;
     letter-spacing: -0.03em;
-    color: var(--color-error);
+    color: #ef2447;
     margin-left: 12px;
 }
 
@@ -48,17 +68,17 @@
 }
 
 .iconError {
-    fill: var(--color-error);
+    fill: #ef2447;
 }
 
 .iconCheck {
-    stroke: var(--color-success);
+    stroke: #08aa83;
     fill: none;
 }
 
 .iconEye {
     fill: none;
-    stroke: var(--color-orange);
+    stroke: #f6b83d;
 }
 
 .toggleBtn {
@@ -73,13 +93,13 @@
     font-size: 10px;
     line-height: 1.2;
     letter-spacing: -0.03em;
-    color: var(--color-success);
+    color: #08aa83;
     margin-left: 12px;
 }
 
 .submitBtn {
-    background: var(--color-orange);
-    color: var(--color-primary);
+    background: #f6b83d;
+    color: #fff;
     font-family: "Manrope", sans-serif;
     font-size: 14px;
     line-height: 1.28571;
