--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -32,8 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0 20px;
-    padding-bottom: 40px;
+    padding: 28px 20px 40px;
 }
 
 .openDrawer {
@@ -41,15 +40,28 @@
 }
 
 .drawerDefaultBg {
-    background: var(--color-primary);
+    background: #fff;
 }
 
 .drawerAuthBg {
-    background: var(--color-orange);
+    background: #f6b83d;
 }
 
 .closeBtn {
     background: none;
     border: none;
     display: block;
+    text-align: end;
+}
+
+.iconCross {
+    transition: fill 0.3s ease;
+}
+
+.whiteIcon {
+    fill: white;
+}
+
+.blackIcon {
+    fill: black;
 }
