add home page, not found page, correct user bar

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,15 +2,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
 }
 
+.wrapper {
+    display: flex;
+    gap: 12px;
+}
 
 .burger {
     background: transparent;
     outline: none;
+    display: flex;
+    align-items: center;
 }
 
 .iconBurger {
     stroke: #262626;
+}
+
+.iconBurgerHome {
+    stroke: #fff;
 }
