--- a/src/components/PetBlock/PetBlock.module.css
+++ b/src/components/PetBlock/PetBlock.module.css
@@ -1,4 +1,6 @@
-.picture {
-    display: flex;
-    justify-content: center;
+.petBlockImage {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
 }
