--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,6 +1,5 @@
 .container {
-    padding: 20px;
-    padding-top: 28px;
+    padding: 28px 20px 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
