--- a/src/components/FriendsList/FriendsList.module.css
+++ b/src/components/FriendsList/FriendsList.module.css
@@ -1,23 +1,22 @@
-.newsList {
+.list {
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    margin-top: 24px;
+    gap: 20px;
+    margin-top: 40px;
 }
 
 
 @media (min-width: 768px) {
-    .newsList {
+    .list {
         flex-direction: row;
         flex-wrap: wrap;
         margin-top: 44px;
-        gap: 32px 24px;
     }
 }
 
-@media (min-width: 1280px) {
-    .newsList {
-        gap: 40px 35px;
+@media (min-width: 768px) {
+    .list {
+        row-gap: 28px;
         margin-top: 60px;
     }
 }
