--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -2,10 +2,15 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
 }
 
 .image {
     border-radius: 15px;
+    object-fit: cover;
+    width: 100%;
+    height: 190px;
+    display: block;
 }
 
 .title {
@@ -51,4 +56,44 @@
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #f6b83d;
+}
+
+
+@media (min-width: 768px) {
+    .card {
+        width: calc((100% - 24px) / 2);
+        gap: 28px;
+    }
+
+    .image {
+        height: 226px;
+    }
+
+    .title {
+    font-size:20px;
+    line-height: 1.3;
+    margin-bottom: 14px;
+    }
+
+    .description {
+        font-size: 16px;
+        line-height: 1.25;
+        margin-bottom: 28px;
+    }
+
+    .date {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+
+    .link {
+        font-size: 16px;
+        line-height: 1.25;
+    }
+}
+
+@media (min-width: 1280px) {
+    .card {
+         width: calc((100% - 70px) / 3);
+    }
 }
