add attention modal, add notices list, add redux pets

--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -3,5 +3,9 @@
     flex-direction: column;
     gap: 8px;
     align-items: center;
-    margin-top: 50px;
+}
+
+.authNavModal {
+    display: flex;
+    gap: 8px;
 }
