--- a/src/components/FriendsItem/FriendsItem.module.css
+++ b/src/components/FriendsItem/FriendsItem.module.css
@@ -5,7 +5,7 @@
     padding: 40px 12px 40px 20px;
     border-radius: 15px;
     background: #fff;
-    width: 100%;
+    min-width: 280px;
 }
 
 .logo {
