--- a/src/components/FriendsList/FriendsList.module.css
+++ b/src/components/FriendsList/FriendsList.module.css
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    justify-content: center;
+    margin: 0 auto;
     margin-top: 40px;
+    max-width: 335px;
 }
 
 
@@ -11,6 +14,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin-top: 44px;
+        max-width: 704px;
     }
 }
 
@@ -18,5 +22,6 @@
     .list {
         row-gap: 28px;
         margin-top: 60px;
+        max-width: 1153px;
     }
 }
