--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 100%;
+    min-width: 280px;
 }
 
 .image {
-    border-radius: 15px;
     object-fit: cover;
-    width: 100%;
+    object-position: center center;
+    min-width: 280px;
+    border-radius: 15px;
     height: 190px;
     display: block;
 }
@@ -61,11 +62,12 @@
 
 @media (min-width: 768px) {
     .card {
-        width: calc((100% - 24px) / 2);
+        width: 340px;
         gap: 28px;
     }
 
     .image {
+        width: 340px;
         height: 226px;
     }
 
@@ -94,6 +96,10 @@
 
 @media (min-width: 1280px) {
     .card {
-         width: calc((100% - 70px) / 3);
+         width: 361px;
+    }
+
+    .image {
+        width: 361px;
     }
 }
