--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -1,28 +1,27 @@
-.newsList {
+.list {
     display: flex;
     flex-direction: column;
-    gap: 24px;
     justify-content: center;
     margin: 0 auto;
-    margin-top: 24px;
+    gap: 20px;
+    margin-top: 40px;
     max-width: 335px;
 }
 
-
 @media (min-width: 768px) {
-    .newsList {
+    .list {
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 44px;
-        gap: 32px 24px;
+        margin-top: 32px;
         max-width: 704px;
     }
 }
 
 @media (min-width: 1280px) {
-    .newsList {
-        gap: 40px 35px;
-        margin-top: 60px;
-        max-width: 1153px;
+    .list {
+        gap: 40px 32px;
+        margin-top: 40px;
+        padding: 0 32px;
+        max-width: 1217px;
     }
 }
