--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     background: #f9f9f9;
+    min-height: 100vh;
 }
 
 @media (min-width: 768px) {
