--- a/src/components/PetBlock/PetBlock.module.css
+++ b/src/components/PetBlock/PetBlock.module.css
@@ -1,6 +1,23 @@
-.petBlockImage {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+.petBlockWrapper {
+    overflow: hidden;
+    border-radius: 30px;
     width: 100%;
+    margin-top: 16px;
+    display: block;
+    background-color: #fbbf24;
+    aspect-ratio: 2 / 1;
+}
+
+.petBlockImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: inherit;
+}
+
+@media (min-width: 768px) {
+    .petBlockWrapper {
+        border-radius: 60px;
+    }
 }
