--- a/src/components/RegisterBtn/RegisterBtn.module.css
+++ b/src/components/RegisterBtn/RegisterBtn.module.css
@@ -13,6 +13,10 @@
     background: #fff4df;
 }
 
+.defaultBtn:hover {
+    background: #fbe7c1;
+}
+
 .modalBtn {
     background: #fff4df;
     border-radius: 30px;
@@ -25,6 +29,10 @@
     line-height: 1.28571;
     letter-spacing: -0.03em;
     color: #f6b83d
+}
+
+.modalBtn:hover {
+    background: #fbe7c1;
 }
 
 @media (min-width: 375px) {
