--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -18,6 +18,13 @@
     align-items: center;
 }
 
+.avatarImage {
+    object-fit: cover;
+    border-radius: 100px;
+    width: 40px;
+    height: 40px;
+}
+
 .avatarIcon {
      fill: #f6b83d;
 }
