--- a/src/components/RegisterBtn/RegisterBtn.module.css
+++ b/src/components/RegisterBtn/RegisterBtn.module.css
@@ -40,3 +40,15 @@
         width: 135px;
     }
 }
+
+@media (min-width: 768px) {
+    .defaultBtn {
+        padding: 15px 20px;
+        font-size: 16px;
+    }
+
+    .modalBtn {
+        padding: 15px 20px;
+        font-size: 16px;
+    }
+}
