--- a/src/components/ModalApproveAction/ModalApproveAction.module.css
+++ b/src/components/ModalApproveAction/ModalApproveAction.module.css
@@ -26,10 +26,17 @@
 
 .closeBtn {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     background: none;
     border: none;
+
+}
+
+.closeIcon {
+    stroke: #262626;
+    width: 24px;
+    height: 24px;
 }
 
 .imageWrapper {
@@ -89,7 +96,28 @@
     width: 100%;
 }
 
-.error {
-    color: red;
-    margin-top: 0.5rem;
+@media (min-width: 768px) {
+    .modal {
+        padding: 80px;
+        width: 448px;
+        max-width: 100%;
+    }
+
+    .text {
+        font-size: 24px;
+        line-height: 1.16667;
+    }
+
+    .yesBtn {
+
+        padding: 14px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
+
+    .cancelBtn {
+        padding: 14px;
+        font-size: 16px;
+        line-height: 1.25;
+    }
 }
