--- a/src/components/PetBlock/PetBlock.module.css
+++ b/src/components/PetBlock/PetBlock.module.css
@@ -1,23 +1,39 @@
 .petBlockWrapper {
     overflow: hidden;
-    border-radius: 30px;
     width: 100%;
-    margin-top: 16px;
     display: block;
-    background-color: #fbbf24;
-    aspect-ratio: 2 / 1;
+    
 }
 
 .petBlockImage {
     width: 100%;
-    height: 100%;
     object-fit: cover;
     display: block;
-    border-radius: inherit;
+    border-radius: 30px;
 }
+
+ @media (min-width: 375px) {
+    .petBlockImage {
+        width: 376px;
+        height: 315px;
+    }
+} 
 
 @media (min-width: 768px) {
     .petBlockWrapper {
         border-radius: 60px;
+    }
+
+    .petBlockImage {
+        width: 704px;
+        height: 302px;
+        border-radius: 60px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .petBlockImage {
+        width: 592px;
+        height: 654px;
     }
 }
