--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,15 +1,35 @@
 .container {
-    padding: 20px;
-    padding-top: 28px;
+    padding: 28px 20px 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    background: #f9f9f9;
+    min-height: 100vh;
+}
+
+.petBlockWrapper {
+    position: relative;
+}
+
+.decoration {
+    display: none;
+}
+
+.loginWrapper {
+    margin: 0 auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .loginForm {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
+    background: #fff;
+    border-radius: 30px;
+    padding: 55px 20px;
+    width: 100%;
 }
 
 .account {
@@ -28,4 +48,125 @@
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #f6b83d;
+}
+
+@media (min-width: 375px) {
+    .loginForm {
+        max-width: 375px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding: 32px;
+    }
+
+    .decoration {
+        position: absolute;
+        bottom: 32px;
+        left: 32px;
+        display: flex;
+        width: 294px;
+        background: #fff;
+        border-radius: 20px;
+        display: flex;
+        gap: 8px;
+        padding: 16px 16px 18px;
+    }
+
+    .imageWrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        height: 60px;
+        border-radius: 100%;
+        background: #fff4df;
+    }
+
+    .dog {
+        width: 32px;
+        height: 32px;
+    }
+
+    .rightBlock {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: 194px;
+    }
+
+    .titleWrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .title {
+        font-family: "Manrope", sans-serif;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: -0.03em;
+        color: #f6b83d;
+    }
+
+    .birthday {
+        font-family: "Manrope", sans-serif;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: -0.02em;
+        color: #262626;
+    }
+
+    .decor {
+        color: rgba(38, 38, 38, 0.5);
+        margin-right: 4px;
+    }
+
+    .text {
+        font-family: "Manrope", sans-serif;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: -0.02em;
+        color: rgba(38, 38, 38, 0.8);
+    }
+
+    .loginWrapper {
+        margin-top: 32px;
+    }
+
+    .loginForm {
+        max-width: 704px;
+        margin-top: 16px;
+        border-radius: 60px;
+        padding: 71px 140px;
+    }
+
+    .account {
+        font-size: 14px;
+        line-height: 1.42857;
+    }
+}
+
+@media (min-width: 1280px) {
+    .decoration {
+        bottom: 97px;
+        left: 61px;
+    }
+
+    .loginWrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 32px;
+        max-width: 1216px;
+        margin-top: 64px;
+    }
+        
+    .loginForm {
+        height: 654px;
+        margin-top: 0;
+        padding: 118px 84px;
+    }
 }
