--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,3 +10,10 @@ body {
 body.ReactModal__Body--open {
   overflow: hidden;
 }
+
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: rgba(38, 38, 38, 0.8) !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
