--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -64,6 +64,7 @@
     .card {
         width: 340px;
         gap: 28px;
+        
     }
 
     .image {
@@ -72,15 +73,29 @@
     }
 
     .title {
-    font-size:20px;
-    line-height: 1.3;
-    margin-bottom: 14px;
+        font-size:20px;
+        margin-bottom: 14px;
+        line-height: 26px;
+        height: 52px;
+        overflow: hidden;
+        display: -webkit-box;
+        line-clamp: 3;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
     }
 
     .description {
         font-size: 16px;
-        line-height: 1.25;
         margin-bottom: 28px;
+        line-height: 20px;
+        height: 80px;
+        overflow: hidden;
+        display: -webkit-box;
+        line-clamp: 4;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
     }
 
     .date {
@@ -96,7 +111,7 @@
 
 @media (min-width: 1280px) {
     .card {
-         width: 361px;
+        width: 361px;
     }
 
     .image {
