--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -7,14 +7,40 @@
     min-height: 100vh;
 }
 
+.newsWrapper {
+    margin-top: 54px;
+}
+
+.searchWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
 @media (min-width: 768px) {
     .container {
         padding: 32px 32px 80px;
     }
+
+    .newsWrapper {
+        margin-top: 85px;
+    }
+
+    .searchWrapper {
+        flex-direction: row;
+        gap: 0;
+        justify-content: space-between;
+        align-items: end;
+    }   
 }
 
 @media (min-width: 1280px) {
     .container {
         padding: 32px 64px 80px;
+    }
+
+    .newsWrapper {
+        margin-top: 96px;
     }
 }
