--- a/src/components/AddPetForm/AddPetForm.module.css
+++ b/src/components/AddPetForm/AddPetForm.module.css
@@ -1,7 +1,6 @@
 .form {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
     padding: 28px 8px 20px;
     width: 100%;
     background: #fff;
@@ -49,6 +48,8 @@
 .femaleIcon {
     stroke: #f43f5e;
     fill: none;
+    width: 20px;
+    height: 20px;
 }
 
 .selectedFemale {
@@ -72,6 +73,8 @@
 .maleIcon {
     stroke: #54adff;
     fill: none;
+    width: 20px;
+    height: 20px;
 }
 
 .selectedMale {
@@ -94,6 +97,8 @@
 
 .otherIcon {
     fill: #f6b83d;
+    width: 20px;
+    height: 20px;
 }
 
 .selectedOther {
@@ -119,6 +124,8 @@
 
 .footprint {
     fill: #f6b83d;
+    width: 34px;
+    height: 34px;
 }
 
 .previewImage {
@@ -175,6 +182,9 @@
 .iconUpload {
     stroke: #f6b83d;
     fill: none;
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
 }
 
 .titleNotice {
@@ -259,14 +269,15 @@
 @media (min-width: 375px) {
     .form {
         padding: 28px 20px 20px;
+        max-width: 376px;
     }
 }
 
 @media (min-width: 768px) {
     .form {
-    margin-top: 16px;
-    padding: 40px 137px 40px;
-    border-radius: 60px;
+        padding: 40px 136px 40px;
+        border-radius: 60px;
+        max-width: 704px;
     }
 
     .title {
@@ -291,20 +302,41 @@
         height: 40px;
     }
 
+    .femaleIcon {
+        width: 24px;
+        height: 24px;
+    }
+
     .maleButton {
         width: 40px;
         height: 40px;
+    }
+
+    .maleIcon {
+        width: 24px;
+        height: 24px;
     }
 
     .otherButton {
         width: 40px;
         height: 40px;
     }
+    
+    .otherIcon {
+        width: 24px;
+        height: 24px;
+    }
 
     .imagePreview {
         width: 86px;
         height: 86px;
         margin-bottom: 12px;
+        margin-top: -22px;
+    }
+
+    .footprint {
+        width: 44px;
+        height: 44px;
     }
 
     .previewImage {
@@ -316,6 +348,19 @@
         margin-bottom: 18px;
     }
 
+    .input {
+        padding: 12px 20px 12px 12px;
+    }
+
+    .uploadButton {
+        padding: 12px 16px;
+    }
+
+    .iconUpload {
+        width: 18px;
+        height: 18px;
+    }
+
     .titleNotice {
         padding: 16px;
         font-size: 16px;
@@ -325,7 +370,7 @@
 
     .pickWrapper {
         gap: 12px;
-        margin-bottom: 46px;
+        margin-bottom: 40px;
     }
 
     .backBtn {
@@ -345,5 +390,17 @@
     .error {
         font-size: 12px;
         margin-left: 16px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .form {
+        max-width: 592px;
+        max-height: 654px;
+        padding: 60px 80px;
+    }
+
+    .imagePreview {
+        margin-top: -16px;
     }
 }
