--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -29,6 +29,7 @@ input:-webkit-autofill {
     color: rgba(38, 38, 38, 0.8);
     padding: 12px;
     display: flex;
+    height: 42px;
 }
 
 .input {
@@ -133,6 +134,7 @@ input:-webkit-autofill {
         font-size: 16px;
         line-height: 1.25;
         padding: 16px;
+        height: 52px;
     }
 
     .input {
