--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -27,6 +27,8 @@
 
 .avatarIcon {
      fill: #f6b83d;
+     width: 20px;
+     height: 20px;
 }
 
 .name {
@@ -46,6 +48,23 @@
 
 
 @media (min-width: 768px) {
+  
+    .avatarWrapper {
+        width: 50px;
+        height: 50px;
+    }
+
+    .avatarImage {
+        width: 50px;
+        height: 50px;
+    }
+
+    .avatarIcon {
+        fill: #f6b83d;
+        width: 24px;
+        height: 24px;
+    }
+
     .name {
         display: inline;
     }
