--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -44,6 +44,10 @@
 }
 
 @media (min-width: 768px) {
+    .wrapper {
+        gap: 16px;
+    }
+
     .userNavDesktop {
         display: flex;
         align-items: center;
