--- a/src/components/PetsItem/PetsItem.module.css
+++ b/src/components/PetsItem/PetsItem.module.css
@@ -2,10 +2,10 @@
     border: 1px solid rgba(38, 38, 38, 0.1);
     border-radius: 20px;
     display: flex;
-    gap: 14px;
-    padding: 16px 12px 16px 16px;
+    gap: 10px;
+    padding: 14px 10px 14px 14px;
     position: relative;
-    width: 295px;
+    width: 240px;
     background: transparent;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .title {
-    max-width: 145px;
+    max-width: 115px;
     font-family: "Manrope", sans-serif;
     font-weight: 700;
     font-size: 14px;
@@ -62,8 +62,8 @@
 
 .trashBtn {
     position: absolute;
-    top: 12px;
-    right: 12px;
+    top: 9px;
+    right: 9px;
     width: 30px;
     height: 30px;
     border-radius: 30px;
@@ -80,4 +80,80 @@
 .iconTrash {
     stroke: #F6B83D;
     fill: none;
+    width: 16px;
+    height: 16px;
+}
+
+@media (min-width: 375px) {
+    .card {
+        gap: 14px;
+        padding: 16px 12px 16px 16px;
+        width: 295px;
+    }
+
+    .title {
+        max-width: 145px;
+    }
+
+    .trashBtn {
+        top: 12px;
+        right: 12px;
+    }
+}
+
+@media (min-width: 768px) {
+    .card {
+        gap: 14px;
+        padding: 22px 12px 23px 16px;
+        width: 305px;
+    }
+
+    .imageWrapper {
+        width: 75px;
+        height: 75px;
+    }
+
+    .title {
+        margin-bottom: 12px;
+    }
+
+    .wrapperList {
+        width: 173px;
+    }
+
+    .trashBtn {
+        width: 32px;
+        height: 32px;
+    }
+
+    .iconTrash {
+        width: 18px;
+        height: 18px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .card {
+        gap: 25px;
+        padding: 20px;
+        width: 440px;
+    }
+
+    .imageWrapper {
+        width: 90px;
+        height: 90px;
+    }
+
+    .wrapperList {
+        width: 243px;
+        gap: 27px;
+    }
+
+    .trashBtn {
+        width: 38px;
+        height: 38px;
+        top: 20px;
+        right: 20px;
+    }
+
 }
