--- a/src/css/global.css
+++ b/src/css/global.css
@@ -14,6 +14,6 @@ body.ReactModal__Body--open {
 
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
-  -webkit-text-fill-color: rgba(38, 38, 38, 0.8) !important;
+  -webkit-text-fill-color: #262626 !important;
   transition: background-color 5000s ease-in-out 0s;
 }
