--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -5,3 +5,29 @@
     background: #f9f9f9;
     min-height: 100vh;
 }
+
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 18px;
+}
+
+@media (min-width: 768px) {
+    .container {
+        padding: 32px 32px 60px;
+    }
+
+    .content {
+        gap: 32px;
+        margin-top: 32px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .content {
+        flex-direction: row;
+        margin: 0 auto;
+        margin-top: 64px;
+    }
+}
